# gaxb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  galaxy_schema.md  main.c  makefile  solar_system.md
Examples/BigPlanets/: .gitignore  .gitmodules
Examples/BigPlanets-swift/BigPlanets/: BigPlanets-Info.plist  SPDetailViewController.h  SPMasterViewController.h  sol.xml
Examples/BigPlanets-swift/BigPlanets.xcodeproj/: project.pbxproj
Examples/BigPlanets/BigPlanets/: BigPlanets-Info.plist  (+9 more)
Examples/Sample/: sample.xsd
Examples/SwiftPlanets/: .gitignore  AstronomicalObject.swift
XCode/: luaconf.h
XCode/gaxb/: gaxb.1
XCode/gaxb.xcodeproj/: project.pbxproj
gaxb.xcodeproj/: project.pbxproj
gaxb.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lua-5.2.0/src/: lua  luac
notes/: gaxb_example.h  manifest_notes.txt
planet/: .project  PlanetCoreShared.xsd  PlanetTypes.xsd
planet/android/: PlanetCore.xsd
planet/ios/: PlanetCore.xsd  PlanetCoreTest.xsd
templates/cpp/: element.cpp  main.lua
templates/html/: index.html  main.lua  style.css
templates/java/: element_imp.java  global.java  main.lua
templates/objc/: element.mm  element_base.h  element_base.mm  global.h  global.mm  main.lua
templates/objc-arc/: element.h  element_base.h  element_base.mm  global.h  global.mm
templates/swift/: element.swift  element_base.swift  global.swift  global_base.swift  main.lua
test/: sample.xsd
test/ocxb_output/: Logistics_Container.h  Logistics_Container.m  Logistics_Package.h  Logistics_Package.m  Logistics_XMLLoader.h  Logistics_XMLLoader.m
(+41 files in other folders)
